Bug 1234673 - Avoid users from locales ar, fa, he, ur for e10s rollout to beta. r=jimm